--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -36,8 +36,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="@dimen/dimen_10dp">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -155,8 +154,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_10dp"
-                app:cardElevation="@dimen/dimen_10dp">
+                android:layout_marginTop="@dimen/dimen_10dp">
 
                 <LinearLayout
                     android:id="@+id/layout_statement_card"
@@ -331,8 +329,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_10dp"
-                app:cardElevation="@dimen/dimen_10dp">
+                android:layout_marginTop="@dimen/dimen_10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -505,8 +502,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_10dp"
-                android:layout_marginBottom="@dimen/dimen_10dp"
-                app:cardElevation="@dimen/dimen_10dp">
+                android:layout_marginBottom="@dimen/dimen_10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
