--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -31,8 +31,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:layout_marginTop="35dp"
-            android:paddingBottom="@dimen/dimen_20dp"
+            android:layout_marginTop="?actionBarSize"
+            android:layout_marginBottom="@dimen/dimen_10dp"
             android:paddingLeft="@dimen/dimen_20dp"
             android:paddingRight="@dimen/dimen_20dp">
 
