--- a/app/src/main/res/layout/fragment_matings_view.xml
+++ b/app/src/main/res/layout/fragment_matings_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.MatingViewFragment">
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.MatingsViewFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
