--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -29,9 +29,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:layout_marginTop="?actionBarSize"
             android:layout_marginBottom="@dimen/dimen_10dp"
             android:paddingLeft="@dimen/dimen_20dp"
             android:paddingRight="@dimen/dimen_20dp">
@@ -41,6 +39,7 @@
                 android:id="@+id/buttons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/dimen_10dp"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
