--- a/app/src/main/res/layout/fragment_breeding_stock_view.xml
+++ b/app/src/main/res/layout/fragment_breeding_stock_view.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -26,8 +26,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,9 +132,8 @@
 
                 </LinearLayout>
 
-
-
             </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -153,8 +150,6 @@
                     android:layout_height="44dp"
                     android:background="@drawable/edittext_corner"
                     android:gravity="center">
-
-
 
                     <ImageView
                         android:id="@+id/breeding_stock_search"
@@ -175,29 +170,17 @@
                         android:layout_centerVertical="true"
                         android:background="@color/transparent"
                         android:layout_toStartOf="@+id/breeding_stock_search" />
-
                 </RelativeLayout>
-
             </RelativeLayout>
-
-
-
-        </LinearLayout>
-
-
-
-
-
         </LinearLayout>
 
         </LinearLayout>
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/breeding_stock_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        </LinearLayout>
 
-
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
