--- a/app/src/main/res/layout/fragment_add_financial_record.xml
+++ b/app/src/main/res/layout/fragment_add_financial_record.xml
@@ -411,7 +411,7 @@
                     android:layout_marginBottom="4dp"
                     android:text="@string/label_customer_supplier" />
 
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/spinner_crop_income_expense_customer_supplier"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
