added image preview on breeding stock

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -281,6 +281,9 @@
         <action
             android:id="@+id/action_littersViewFragment_to_addLittersFragment"
             app:destination="@id/addLittersFragment" />
+        <action
+            android:id="@+id/action_littersViewFragment_to_livestockRecordsFragment"
+            app:destination="@id/livestockRecordsFragment" />
     </fragment>
     <fragment
         android:id="@+id/medicationsViewFragment"
@@ -328,6 +331,9 @@
         <action
             android:id="@+id/action_matingsViewFragment_to_addMatingFragment"
             app:destination="@id/addMatingFragment" />
+        <action
+            android:id="@+id/action_matingsViewFragment_to_livestockRecordsFragment"
+            app:destination="@id/livestockRecordsFragment" />
     </fragment>
     <dialog
         android:id="@+id/addMatingFragment"
