--- a/app/src/main/res/layout/fragment_add_breeding_stock.xml
+++ b/app/src/main/res/layout/fragment_add_breeding_stock.xml
@@ -450,6 +450,30 @@
 
                     </LinearLayout>
 
+                    //image preview
+                    <LinearLayout
+                        android:id="@+id/gallery_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height ="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginBottom="15dp"
+                        android:visibility="gone">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/image_preview"
+                            android:layout_marginBottom="4dp" />
+
+                        <ImageView
+                            android:id="@+id/image_preview"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/edittext_corner"
+                            android:scaleType="centerCrop"/>
+
+                    </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
