--- a/app/src/main/res/layout/fragment_fertilizer_application.xml
+++ b/app/src/main/res/layout/fragment_fertilizer_application.xml
@@ -179,7 +179,8 @@
                         android:layout_centerVertical="true"
                         android:layout_gravity="center"
                         android:background="@android:color/transparent"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_marginLeft="5dp"
                         android:spinnerMode="dropdown"/>
 
@@ -279,7 +280,7 @@
                     android:layout_weight="0.6"
                     android:paddingStart="@dimen/dimen_10dp"
                     android:background="@android:color/transparent"
-                    android:inputType="number"/>
+                    android:inputType="numberDecimal"/>
 
                 <TextView
                     android:id="@+id/txt_crop_fertilizer_unit"
